# omniTask

./: .bumpversion.cfg  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
examples/caching_example/: caching_example.py  caching_workflow.yaml
examples/conditional_workflow/: README.md  main.py  small_numbers.txt  summary.txt  tasks.py  workflow.yaml
examples/max_retry/: README.md  main.py  nonexistent.txt1  tasks.py  workflow.yaml
examples/mock-bounty/: README.md  main.py  workflow.yaml
examples/mock-bounty/tasks/: result_analyzer.py  subdomain_scanner.py  url_checker.py
examples/redis_cache_example/: README.md  redis_cache_example.py  redis_workflow.yaml  template_example.py  test_redis_cache.py
examples/streaming-example/: main.py  streaming_workflow.yaml
examples/streaming-example/tasks/: result_analyzer.py  streaming_subdomain_scanner.py  streaming_url_checker.py
examples/text_processing/: README.md  main.py  stats.txt  template_main.py  timeout_test.py  timeout_workflow.yaml  uppercase.txt  workflow.yaml
examples/text_processing/tasks/: count_task.py  file_ops_task.py  timeout_task.py  uppercase_task.py
omniTask/: __init__.py
omniTask/cache/: __init__.py  cache_interface.py  cache_key_generator.py  file_cache.py  memory_cache.py  redis_cache.py
omniTask/core/: registry.py  task.py  template.py  workflow.py
omniTask/models/: task_group.py  task_result.py
omniTask/utils/: logging.py  path_parser.py  workflow_checker.py
