[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omniTask"
version = "0.3.0"
description = "A powerful Python-based workflow automation tool"
readme = "README.md"
authors = [
    {name = "SARPER AVCI", email = "sarperavci20@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "PyYAML>=6.0"
]

[project.urls]
Homepage = "https://github.com/sarperavci/omniTask"
Repository = "https://github.com/sarperavci/omniTask.git" 